# OpenField

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenField.sln  README.MD  build_win64.bat  clean_win64.bat
.github/workflows/: dotnet-desktop.yml
OpenFieldCore/: OpenFieldCore.csproj
OpenFieldCore/Asset/: FontAsset.cs  TextureAsset.cs
OpenFieldCore/Asset/Factory/: IFactory.cs  TextureFactory.cs
OpenFieldCore/Asset/FileFormat/: FileFormatDDS.cs
OpenFieldCore/Asset/Format/: Format.cs  FormatParameters.cs  FormatType.cs
OpenFieldCore/Audio/: AudioManager.cs
OpenFieldCore/Collision/: Intersection.Cube.cs  Intersection.Point.cs  Intersection.Sphere.cs  Intersection.cs
OpenFieldCore/Collision/Result/: EPlanarTraceResult.cs  SIntersectionResult.cs
OpenFieldCore/Collision/Shape/: ICollisionShape.cs  SphereCollisionShape.cs
OpenFieldCore/Collision/World/: IPlanarCollisionWorld.cs  UniformPlanarCollisionWorld.cs
OpenFieldCore/Hashing/: FNV1A.cs  IHashFunction.cs
OpenFieldCore/IO/: ArrayView2D.cs  BinaryInputStream.cs  EEndianness.cs  InputStream.IDisposableImpl.cs  InputStream.OtherTypes.cs  InputStream.PrimitiveType.cs  InputStream.Seeking.cs  InputStream.cs  OutputStream.IDisposableImpl.cs  OutputStream.OtherTypes.cs  OutputStream.PrimitiveTypes.cs  OutputStream.Seeking.cs  OutputStream.StringType.cs  OutputStream.Text.cs  OutputStream.cs  SeekOrigin.cs  TextureView.cs
OpenFieldCore/IO/Hashing/: FNV32.cs  FNV64.cs  FromSoftwareCRC.cs  HashFunction.cs
OpenFieldCore/Input/: Control.cs  Input.cs  InputDevice.cs  InputManager.cs  InputMapping.cs  InputState.cs
OpenFieldCore/Mathematics/: FastMath.cs  Matrix44.cs  Vector2i.cs  Vector2s.cs  Vector3s.cs  Vector4s.cs
OpenFieldCore/Numerics/: FastMathF.cs  Matrix4f.cs  Vector2f.cs  Vector2i.cs  Vector3f.cs
OpenFieldCore/Rendering/: Camera.cs  Colour.cs  Font.cs  Render2D.Batching.cs  Render2D.DrawCircle.cs  Render2D.DrawLinearPath.cs  Render2D.DrawRect.cs  Render2D.cs  Render3D.cs  RenderContext.cs  Shader.cs  Texture.cs
OpenFieldCore/Resource/: EResourceFlags.cs  EResourceState.cs  IResource.cs  ResourceManager.cs  SResourceLoadContext.cs
OpenFieldCore/Utility/: Log.cs
OpenFieldCore/World/: IZone.cs  TilemapZone3D.cs
OpenFieldEditor/: Game.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  OpenFieldEditor.csproj  Program.cs  ProgramContext.cs  ProjectsWindow.Designer.cs  ProjectsWindow.cs  ProjectsWindow.resx  SplashWindow.Designer.cs  SplashWindow.cs
OpenFieldEditor/Data/: ProjectFile.cs
OpenFieldEditor/Editor/: EditorConfiguration.cs  EditorProperties.cs
OpenFieldEditor/EditorUI/: IUserInterface.cs  ImGuiManager.cs  UIConsole.cs
OpenFieldEditor/Properties/: Resources.Designer.cs  Resources.resx
OpenFieldForge/: ConversionFactory.cs  OpenFieldForge.csproj
OpenFieldForge/Asset/: NameTableAsset.cs
OpenFieldForge/FileFormat/: BMPFormat.cs  FileFormatTIM.cs  FormatTIM.cs
OpenFieldRuntime/: Game.cs  OpenFieldRuntime.csproj  Program.cs
Resources/Model/: BARREL.ms3d  axis_xyz.ms3d  plane_xz.ms3d  ts_cave_0000.ms3d  ts_test_0000.ms3d
Resources/Shader/: Colour2D.fss  Colour2D.jfx  Colour2D.vss  ColourTexture2D.fss  ColourTexture2D.vss  ImGUI.fss  ImGUI.vss  NormalTexcoord3D.fss  NormalTexcoord3D.jfx  NormalTexcoord3D.vss
Stuff/: ofe_splash.psd
specifications/: APE.c  MPC.c  RPC.c  RPC_IMPL.md  Script Callbacks.txt  ZNE.c  font json spec.txt
src/: README.MD  main.cpp
src/openfieldcore/: CMakeLists.txt
src/openfieldcore/asset/: mpcfile.hpp
src/openfieldcore/math/: vector.hpp
src/openfieldcore/utility/: inputstream.cpp  inputstream.hpp  logger.cpp  logger.hpp
src/openfieldforge/: format.hpp  main.cpp
src/openfieldtests/: test_vector.cpp
(+50 files in other folders)
